adapted to the new sample framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,33 +6,28 @@ Project(${PROJNAME})
 Message(STATUS "-------------------------------")
 Message(STATUS "Processing Project ${PROJNAME}:")
 
-# offer the choice of having shared_sources as a sub-folder... good for packaging a sample
-# if BASE_DIRECTORY not defined, it means this cmake file was called as the first entry point and not included
+#####################################################################################
+# look for shared_sources 1) as a sub-folder 2) at some other locations
+# this cannot be put anywhere else since we still didn't find CMakeLists_include.txt yet
+#
 if(NOT BASE_DIRECTORY) # if not defined, it means this cmake file was called as the first entry point and not included
-  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/shared_sources)
+  # check if the external repository is outside or inside the project (as a sub-module)
+  # testing the file CMakeLists_include.txt because when sub-modules are not cloned, the folders are still there...
+  # we also assume here that if shared_sources is there, shared_external is, too...
+  SET(ADD_SUBDIR_BELOW 1)
+  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/shared_sources/CMakeLists_include.txt)
     Message(STATUS "found sub-folder shared_sources")
     SET(BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
     INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/shared_sources/CMakeLists_include.txt)
-    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/shared_sources ${CMAKE_BINARY_DIR}/shared_sources)
-  elseif(EXISTS $ENV{NVPRO_ROOT_DIR}/shared_sources)
-    FILE(TO_CMAKE_PATH "$ENV{NVPRO_ROOT_DIR}" BASE_DIRECTORY)
-    INCLUDE(${BASE_DIRECTORY}/shared_sources/CMakeLists_include.txt)
-    add_subdirectory(${BASE_DIRECTORY}/shared_sources ${CMAKE_BINARY_DIR}/shared_sources)
   elseif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../../shared_sources)
     SET(BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
     INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../../shared_sources/CMakeLists_include.txt)
-    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../shared_soources ${CMAKE_BINARY_DIR}/shared_sources)
   else()
     SET(BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/..)
     INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../shared_sources/CMakeLists_include.txt)
-    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../shared_sources ${CMAKE_BINARY_DIR}/shared_sources)
   endif()
-endif()
+endif(NOT BASE_DIRECTORY)
 _add_project_definitions(${PROJNAME})
-
-if (SUPPORT_NVTOOLSEXT)
-add_definitions(-DSUPPORT_NVTOOLSEXT)
-endif(SUPPORT_NVTOOLSEXT)
 
 #####################################################################################
 # additions from packages needed for this sample
@@ -41,14 +36,20 @@ endif(SUPPORT_NVTOOLSEXT)
 # add files in PACKAGE_SOURCE_FILES
 #
 
+_add_package_OpenGL()
 _add_package_VulkanSDK()
-_add_package_AntTweakBar()
+
+#####################################################################################
+# process the rest of some cmake code that needs to be done *after* the packages add
+_add_shared_sources_lib()
 
 #####################################################################################
 # Source files for this project
 #
 file(GLOB SOURCE_FILES *.cpp *.hpp *.inl *.h *.c)
-file(GLOB GLSL_FILES *.glsl)
+file(GLOB GLSL_FILES shaders/*.glsl)
+
+file(GLOB IMAGE_FILES images/*.*)
 
 
 #####################################################################################
@@ -62,6 +63,15 @@ if(WIN32 AND NOT GLUT_FOUND)
 else()
   add_executable(${PROJNAME} ${SOURCE_FILES} ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES} ${GLSL_FILES})
 endif()
+
+    if(UNIX)
+      add_definitions(-g -std=c++11)
+      set(UNIXLINKLIBS dl png assimp pthread)
+    else()
+      set(UNIXLINKLIBS)
+    endif()
+
+
 
 #####################################################################################
 # common source code needed for this sample
@@ -81,11 +91,13 @@ target_link_libraries(${PROJNAME} optimized
     ${LIBRARIES_OPTIMIZED}
     ${PLATFORM_LIBRARIES}
     shared_sources
+     ${UNIXLINKLIBS}
 )
 target_link_libraries(${PROJNAME} debug
     ${LIBRARIES_DEBUG}
     ${PLATFORM_LIBRARIES}
     shared_sources
+    ${UNIXLINKLIBS}
 )
 
 #####################################################################################
@@ -94,3 +106,10 @@ target_link_libraries(${PROJNAME} debug
 
 _copy_binaries_to_target( ${PROJNAME} )
 
+# additional copies for standalone run from install folder
+install(FILES ${GLSL_FILES} CONFIGURATIONS Release DESTINATION "bin_${ARCH}/GLSL_${PROJNAME}")
+install(FILES ${GLSL_FILES} CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/GLSL_${PROJNAME}")
+install(FILES "chopper_pack32.vks" CONFIGURATIONS Release DESTINATION "bin_${ARCH}/resources_${PROJNAME}")
+install(FILES "chopper_pack32.vks" CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/resources_${PROJNAME}")
+install(FILES ${IMAGE_FILES} CONFIGURATIONS Release DESTINATION "bin_${ARCH}/resources_${PROJNAME}")
+install(FILES ${IMAGE_FILES} CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/resources_${PROJNAME}")
