--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ _add_project_definitions(${PROJNAME})
 
 _add_package_OpenGL()
 _add_package_VulkanSDK()
+_add_package_ShaderC()
 
 #####################################################################################
 # process the rest of some cmake code that needs to be done *after* the packages add
@@ -59,18 +60,16 @@ if(WIN32 AND NOT GLUT_FOUND)
   add_definitions(/wd4996) #remove printf warning
   add_definitions(/wd4244) #remove double to float conversion warning
   add_definitions(/wd4305) #remove double to float truncation warning
-  add_executable(${PROJNAME} WIN32 ${SOURCE_FILES} ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES} ${GLSL_FILES})
-else()
-  add_executable(${PROJNAME} ${SOURCE_FILES} ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES} ${GLSL_FILES})
 endif()
 
-    if(UNIX)
-      add_definitions(-g -std=c++11)
-      set(UNIXLINKLIBS dl png assimp pthread)
-    else()
-      set(UNIXLINKLIBS)
-    endif()
+add_executable(${PROJNAME} ${SOURCE_FILES} ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES} ${GLSL_FILES})
 
+if(UNIX)
+  add_definitions(-g -std=c++11)
+  set(UNIXLINKLIBS dl png assimp pthread)
+else()
+  set(UNIXLINKLIBS)
+endif()
 
 
 #####################################################################################
